# beacon

./: BUILD.gn  HelloWorld.cpp  HelloWorld.h  README.md  SkLoadICU.cpp  SkLoadICU.h  apply_patches.bat  apply_patches.py  gen_Debug.sh  gen_Release.sh  gen_sln.bat  gen_sln_Debug.bat  gen_sln_Release.bat  gen_xcode_Debug.sh  gen_xcode_Release.sh  my_blink_platform_impl.cc  my_frame_test_helpers.cc  my_frame_test_helpers.h  my_webthemeengine_impl_default.cc  my_webthemeengine_impl_default.h
app_base/: Application.cpp  Application.h  CommandSet.h  DawnWindowContext.cpp  DawnWindowContext.h  DisplayParams.h  GLWindowContext.cpp  GLWindowContext.h  MetalWindowContext.h  MetalWindowContext.mm  RasterWindowContext.h  VulkanWindowContext.cpp  VulkanWindowContext.h  Window.cpp  Window.h  WindowContext.h
app_base/android/: GLWindowContext_android.cpp  RasterWindowContext_android.cpp  VulkanWindowContext_android.cpp  WindowContextFactory_android.h  Window_android.cpp  Window_android.h  main_android.cpp  surface_glue_android.cpp  surface_glue_android.h
app_base/ios/: GLWindowContext_ios.mm  MetalWindowContext_ios.mm  RasterWindowContext_ios.mm  WindowContextFactory_ios.h  Window_ios.h  Window_ios.mm  main_ios.mm
app_base/mac/: DawnMTLWindowContext_mac.mm  GLWindowContext_mac.mm  MetalWindowContext_mac.mm  RasterWindowContext_mac.mm  WindowContextFactory_mac.h  Window_mac.h  Window_mac.mm  main_mac.mm
app_base/unix/: DawnVulkanWindowContext_unix.cpp  GLWindowContext_unix.cpp  RasterWindowContext_unix.cpp  VulkanWindowContext_unix.cpp  WindowContextFactory_unix.h  Window_unix.cpp  Window_unix.h  keysym2ucs.c  main_unix.cpp
app_base/win/: ANGLEWindowContext_win.cpp  DawnD3D12WindowContext_win.cpp  GLWindowContext_win.cpp  RasterWindowContext_win.cpp  VulkanWindowContext_win.cpp  WindowContextFactory_win.h  Window_win.cpp  Window_win.h  main_win.cpp
chromium_patches/: BUILD.gn.patch  base_run_loop.cc.patch  build_config_BUILD.gn.patch  content_common_BUILD.gn.patch  content_public_common_BUILD.gn.patch  content_public_renderer_BUILD.gn.patch  content_renderer_BUILD.gn.patch  skia_BUILD.gn.patch  skia_features.gni.patch  sysroot-creator-sid.sh.patch  third_party_blink_renderer_core_BUILD.gn.patch  third_party_blink_renderer_modules_BUILD.gn.patch  third_party_blink_renderer_platform_BUILD.gn.patch  third_party_blink_renderer_platform_runtime_enabled_features.json5.patch
scripts/: asm_embed.py  bin2c.py  bin2coff.py  test.h
src/: BNApp.cpp  BNApp.h  BNBackendController.cpp  BNBackendController.h  BNBlinkPlatformImpl.cpp  BNBlinkPlatformImpl.h  BNFI.cpp  LgApp.cpp  LgApp.h  LgApp.h~RF1a5b8701.TMP  LgBackendController.cpp  LgBackendController.h  LgBlinkPlatformImpl.cpp  LgBlinkPlatformImpl.h  main.cpp
src/bn/glue/: SkLoadICU.cpp  SkLoadICU.h  my_blink_platform_impl.cc  my_blink_platform_impl.h  my_frame_test_helpers.cc  my_frame_test_helpers.h  my_webthemeengine_impl_conversions.cc  my_webthemeengine_impl_conversions.h  my_webthemeengine_impl_default.cc  my_webthemeengine_impl_default.h  my_webthemeengine_impl_mac.cc  my_webthemeengine_impl_mac.h
src/bn/impl/: BNApp.cpp  BNApp.h  BNBlinkPlatformImpl.cpp  BNBlinkPlatformImpl.h  BNLayer.cpp  BNLayer.h  main.cpp
src/bn/sdk/: BNBackendController.cpp  BNBackendController.h  BNFI.cpp  BNFI.h
src/hell/: SkLoadICU.cpp  my_blink_platform_impl.cc  my_blink_platform_impl.h  my_frame_test_helpers.cc  my_frame_test_helpers.h  my_webthemeengine_impl_conversions.cc  my_webthemeengine_impl_conversions.h  my_webthemeengine_impl_default.cc  my_webthemeengine_impl_default.h  my_webthemeengine_impl_mac.cc
